<resources>
    <string name="app_name">PopularMovies1</string>

    <!--menu strings-->
    <string name="menu_topRated">Top Rated</string>
    <string name="menu_mostPopular">Most Popular</string>
    <string name="menu_upComing">Up Coming</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_sort">Sort By..</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="rating_max">/10</string>

    <string name="detail_image">Movie Detail Image</string>
    <string name="detail_button_text">MARK AS \n FAVOURITE</string>
    <string name="detail_overview">Overview:</string>
    <string name="detail_trailer">Trailers:</string>
    <string name="detail_review">Reviews:</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="title_activity_settings">Settings</string>

</resources>
