<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/sort"
        android:title="@string/menu_sort"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/mostPopular"
                    android:title="@string/menu_mostPopular"
                    android:checked="true"/>

                <item android:id="@+id/upComing"
                    android:title="@string/menu_upComing"
                    android:checked="false"/>

                <item android:id="@+id/topRated"
                    android:title="@string/menu_topRated"
                    android:checked="false" />

                <item android:id="@+id/favorites"
                    android:title="@string/menu_favorites"
                    android:checked="false" />
            </group>
        </menu>
    </item>

    <item android:id="@+id/settings"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>

</menu>